# JustRenderer

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
JustLab/: Application.cpp  Global.h
JustLab/Accel/: Accel.cpp  Accel.h  AccelNode.h  BVH.cpp  BVH.h  Naive.cpp  Naive.h  OctTree.cpp  OctTree.h
JustLab/Accelerator/: Accelerator.h  BVH.h  OctTree.h
JustLab/BxDF/: BxDF.h  BxDFRecord.h  Dielectric.cpp  Diffuse.cpp  Microfacet.cpp
JustLab/Camera/: Camera.h  OrthogonalCamera.cpp  PerspectiveCamera.cpp
JustLab/Core/: Accel.cpp  Accel.h  BxDF.h  Emitter.h  Integrator.h
JustLab/Emitter/: AreaLight.h  Emitter.h  EmitterRecord.h
JustLab/Geometry/: BoundingBox2.h  BoundingBox3.h  Bounds.cpp  Bounds.h  Bounds2.h  Bounds3.h  HitRecord.h  Hittable.h  Homogeneous.h  Matrix2.h  Matrix3.h  Matrix4.h  Mesh.h  Object.h  Point2.h  Point3.h  Point4.h  Ray.h  Ray3.h  Rectangle.h  Sphere.cpp  Sphere.h  Transform.h  Triangle.h  Vector2.h  Vector3.h  Vector4.h
JustLab/Graphics/: Mesh.h  Model.h  Texture.h  Transform.h  Vertex.h
JustLab/Hittable/: BoundingBox2.h  BoundingBox3.h  Bounds.h  Bounds2.h  Bounds3.h  HitRecord.h  Hittable.h  Mesh.h  Ray.h  Scene.h  Sphere.h
JustLab/Integrator/: AOIntegrator.cpp  AOIntegrator.h  EmitterSampling.cpp  EmitterSampling.h  Integrator.h  MaterialSampling.cpp  MaterialSampling.h  MultipleImportanceSampling.cpp  MultipleImportanceSampling.h  NormalIntegrator.h  PathMatsIntegrator.h  SimpleIntegrator.cpp  SimpleIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h  WhittedStyle.cpp  WhittedStyle.h
JustLab/Just/: BxDF.h  Camera.h  Global.h  Material.h
JustLab/Light/: AreaLight.h  ILight.h  Light.h  LightRecord.h
JustLab/Math/: Array2.h  Array3.h  Color.h  Color3.h  Color4.h  Distribution.h  Frame.h  Math.h  Matrix.h  Matrix2.h  Matrix3.h  Matrix4.h  MatrixExt.h  MatrixExtension.h  Point.h  Point2.h  Point3.h  Point4.h  Quaternion.h  QuaternionExt.h  RNG.h  Random.h  Scalar.h  Transform.h  Vector.h  Vector2.h  (+4 more)
Test/: App.cpp  MathTester.cpp  Test.cpp
include/: Global.h
src/: Application.cpp  Test.cpp  main.cpp
test/: GeometryTester.cpp  GraphicsTester.cpp  MathTester.cpp  Test.cpp  ajax_ao.tga  ajax_normal.tga  ajax_simple.tga  bunny_normal.tga  output.tga  output1.tga  test1.tga  test3.tga
(+231 files in other folders)
